add source of model (import or export); use enum for part (cgmes subset)
Signed-off-by: Luma <zamarrenolm@aia.es>