@@ -9,8 +9,6 @@ package com.powsybl.cgmes.model;
 
 import java.util.Map;
 
-import com.google.common.collect.ImmutableMap;
-
 /**
  * @author Luma Zamarreño {@literal <zamarrenolm at aia.es>}
  */
@@ -58,6 +56,11 @@ public enum CgmesSubset {
             return super.isValidName(contextName)
                     || TOPOLOGY.isValidName(contextName) && isBoundary(contextName);
         }
+    }, UNKNOWN("unknown") {
+        @Override
+        public boolean isValidName(String contextName) {
+            return false;
+        }
     };
 
     CgmesSubset(String identifier) {
@@ -88,7 +91,7 @@ public enum CgmesSubset {
     private final String identifier;
     private final String validName0;
     private final String validName1;
-    private static final Map<String, String> PROFILE = ImmutableMap.of(
+    private static final Map<String, String> PROFILE = Map.of(
         "SV", "StateVariables",
         "EQ", "EquipmentCore",
         "SSH", "SteadyStateHypothesis",
